cmake_minimum_required(VERSION 3.0)
include(core/CMake/LFLOS.cmake)

set(LFL_CPACK 1)
set(LFL_CCACHE 1)
set(LFL_GLEW 1)
set(LFL_OPENGL 1)
#set(LFL_QT 1)
set(LFL_PNG 1)
set(LFL_GIF 1)
set(LFL_JPEG 1)
set(LFL_ICONV 1)
set(LFL_GTEST 1)
set(LFL_OPENSSL 1)
set(LFL_FREETYPE 1)
set(LFL_FLATBUFFERS 1)
set(LFL_NET_SSH 1)
set(LFL_NET_RFB 1)
set(LFL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(LFL_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(LFL_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/core)
set(LFL_OS_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${LFL_OS}/core)

SET(CPACK_PACKAGE_NAME "LTerminal")
SET(CPACK_PACKAGE_VERSION "1.0.0")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_CONTACT "Lucid Fusion Labs, LLC <support@lucidfusionlabs.com>")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Modern terminal with inline image rendering and shader effects")
SET(CPACK_PACKAGE_DESCRIPTION "LTerminal is a free, open-source, cross-platform, easy-to-use terminal emulator")
SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/LTerminal/LTerminal-windows/icon.ico")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_STRIP_FILES ON)
SET(CPACK_DEBIAN_PACKAGE_SECTION misc)
SET(CPACK_DEBIAN_PACKAGE_PRIORITY extra)
SET(CPACK_DEBIAN_PACKAGE_HOMEPAGE http://www.lucidfusionlabs.com/LTerminal/)
SET(CPACK_DEBIAN_PACKAGE_REPLACES LTerminal)
SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
SET(CPACK_DEBIAN_PACKAGE_RELEASE 1)
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5widgets5,libqt5opengl5")
SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
SET(CPACK_RPM_FILE_NAME RPM-DEFAULT)
SET(CPACK_RPM_PACKAGE_LICENSE GPL-3+)
SET(CPACK_RPM_PACKAGE_URL ${CPACK_DEBIAN_PACKAGE_HOMEPAGE})
SET(CPACK_RPM_PACKAGE_OBSOLETES ${CPACK_DEBIAN_PACKAGE_REPLACES})
SET(CPACK_RPM_PACKAGE_AUTOREQ ON)
SET(CPACK_RPM_PACKAGE_DESCRIPTION ${CPACK_PACKAGE_DESCRIPTION})
SET(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
SET(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION
    /usr/share/applications
    /usr/share/icons
    /usr/share/icons/hicolor
    /usr/share/icons/hicolor/scalable
    /usr/share/icons/hicolor/scalable/apps)

set(LTerminal_INSTALL_BIN bin)
set(LTerminal_INSTALL_DOC share/doc/LTerminal)
set(LTerminal_INSTALL_RES share/LTerminal/res)
set(LFL_APP_ASSET_PATH ../share/LTerminal/res)

include(core/CMake/LFLCore.cmake)
add_subdirectory(${LFL_SOURCE_DIR}/core/web ${LFL_CORE_BINARY_DIR}/web)

add_subdirectory(LTerminal)

